--- a/src/noteomatic/demo/templates/note.html
+++ b/src/noteomatic/demo/templates/note.html
@@ -3,15 +3,19 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block content %}
-<h1>{{ title }}</h1>
-<p class="metadata">
-    <i>{{ date }}</i> · 
-    <a href="#" onclick="shareNote(); return false;">Share this note</a> · 
-    <a href="/note/{{ note_id }}/edit">Edit note</a>
-</p>
-<div id="share-result" style="display: none;"></div>
+<article>
+    <h1>{{ title }}</h1>
+    <p class="metadata subtitle">
+        <i>{{ date }}</i> · 
+        <a href="#" onclick="shareNote(); return false;">Share this note</a> · 
+        <a href="/note/{{ note_id }}/edit">Edit note</a>
+    </p>
+    <div id="share-result" style="display: none;"></div>
 
-{{ content|safe }}
+    <section>
+        {{ content|safe }}
+    </section>
+</article>
 
 <script src="/static/navigation.js" defer></script>
 <script>
